--- a/aula01.html
+++ b/aula01.html
@@ -9,8 +9,11 @@
 <body>
     <h1>Lógica de programação com JavaScript</h1>
     <script>
-       let nome = prompt("Qual o seu nome?");
-       alert(`Bem-vinda ${nome}`);
+       let numero = parseInt(prompt("Digite um número"));
+       let numero1 = parseInt(prompt("Digite outro número"));
+       let media = (numero + numero1)/2;
+       alert(media);
+       
     </script>
 </body>
 </html>
