--- a/aula01.html
+++ b/aula01.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Lógica de programação com JavaScript</h1>
     <script>
-       let numero = parseInt(prompt("Digite um número"));
-       let numero1 = parseInt(prompt("Digite outro número"));
-       let media = (numero + numero1)/2;
-       alert(media);
+       
+       let numero1 = parseInt(prompt("Digite um número"));
+       let numero2 = parseInt(prompt("Digite o segundo número"));
+       let mode = numero1 % numero2;
+       alert(`O resta da divisão de numero1 + numero2 é ${mode}`);
        
     </script>
 </body>
